# ampelios

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  constraints.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  kafka-setup.md  local-setup.md  units.md
docs/bruno/: Trigger pipeline.bru  View clusters.bru  bruno.json
infra/: docker-compose-kafka.yml  docker-compose.yml  init.sql
infra/bento_streams/: load_csv_to_kafka.yml
pipeline/: dag.py  db_utils.py  logging.py  types.py
pipeline/cluster/: main.py  postgres.py
pipeline/load/: main.py  postgres.py  transforms.py
pipeline/save/: main.py
pipeline/save_sessions/: main.py
server/: __init__.py  api.py  view.py
tests/: test_cluster.py  test_dag.py  test_load_postgres.py  test_load_transforms.py  test_server.py
